<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5DE2F3"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

 <TextView
     android:layout_margin="10dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/title_text"
     android:textSize="20sp"
     android:textColor="#000000"
     android:textStyle="bold"
     />
 <CheckBox
     android:id="@+id/milkcheakboxId"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:text="@string/milk_text"
     android:textSize="20sp"
     />
 <CheckBox
     android:id="@+id/sugercheakboxId"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:text="@string/suger_text"
     android:textSize="20sp"
     />
 <CheckBox
     android:id="@+id/watercheakboxId"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:text="@string/water_text"
     android:textSize="20sp"
     />
 <Button
     android:id="@+id/showbuttonId"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/button_text"
     android:textSize="20sp"
     android:textStyle="bold"
     />
 <TextView
     android:id="@+id/resulttextviewId"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="20sp"
     android:textColor="#000000"
     android:textStyle="bold"
     />

 <TextView
     android:layout_margin="10dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/gendertitle_text"
     android:textSize="20sp"
     android:textColor="#000000"
     android:textStyle="bold"
     />
 <RadioGroup
     android:id="@+id/radiogroupId"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">

  <RadioButton
      android:id="@+id/maleId"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/male_text"
      android:textSize="20sp"
      android:layout_marginBottom="10dp"/>
  <RadioButton
      android:id="@+id/femaleId"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/female_text"
      android:textSize="20sp"/>

 </RadioGroup>

 <Button
     android:layout_marginTop="20dp"
     android:id="@+id/showbutton1Id"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/show_text"
     android:textSize="20dp"
     android:textStyle="bold"
     />
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="20sp"
     android:textColor="#000000"
     android:id="@+id/resultId"/>


</LinearLayout>